// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Disabled, rendering 1`] = `
.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #abb7c2;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 16px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #abb7c2;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #abb7c2;
  box-shadow: 0 0 0 0 #abb7c2;
}

.c3::-webkit-input-placeholder {
  color: #abb7c2;
}

.c3::-moz-placeholder {
  color: #abb7c2;
}

.c3:-ms-input-placeholder {
  color: #abb7c2;
}

.c3::placeholder {
  color: #abb7c2;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c2 {
  visibility: hidden;
  display: inline;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className={undefined}
    data-test-id="RADIO_BUTTON_DISABLED"
    onClick={[Function]}
  >
    <span
      className=""
      disabled={true}
    >
      <svg
        className="c1"
        color="borderGray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
        	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
        />
      </svg>
    </span>
    <input
      className="c2 c3"
      name={undefined}
      type="radio"
      value={undefined}
    />
  </div>
</div>
`;

exports[`RadioButton Not Selected, rendering 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #abb7c2;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 16px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #abb7c2;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #abb7c2;
  box-shadow: 0 0 0 0 #abb7c2;
}

.c4::-webkit-input-placeholder {
  color: #abb7c2;
}

.c4::-moz-placeholder {
  color: #abb7c2;
}

.c4:-ms-input-placeholder {
  color: #abb7c2;
}

.c4::placeholder {
  color: #abb7c2;
}

.c4::-ms-clear {
  display: none;
}

.c4:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c1:hover svg {
  fill: #007aff;
}

.c3 {
  visibility: hidden;
  display: inline;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className={undefined}
    data-test-id="RADIO_BUTTON_NOT_SELECTED"
    onClick={[Function]}
  >
    <span
      className="c1"
      disabled={undefined}
    >
      <svg
        className="c2"
        color="borderGray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
        	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
        />
      </svg>
    </span>
    <input
      className="c3 c4"
      name={undefined}
      type="radio"
      value={undefined}
    />
  </div>
</div>
`;

exports[`RadioButton Selected, rendering 1`] = `
.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  color: #007aff;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 16px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #abb7c2;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #abb7c2;
  box-shadow: 0 0 0 0 #abb7c2;
}

.c3::-webkit-input-placeholder {
  color: #abb7c2;
}

.c3::-moz-placeholder {
  color: #abb7c2;
}

.c3:-ms-input-placeholder {
  color: #abb7c2;
}

.c3::placeholder {
  color: #abb7c2;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c2 {
  visibility: hidden;
  display: inline;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className={undefined}
    data-test-id="RADIO_BUTTON_SELECTED"
    onClick={[Function]}
  >
    <span
      className=""
      disabled={undefined}
    >
      <svg
        className="c1"
        color="blue"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M12,7c-2.8,0-5,2.2-5,5s2.2,5,5,5s5-2.2,5-5S14.8,7,12,7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10
        	s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
        />
      </svg>
    </span>
    <input
      className="c2 c3"
      name={undefined}
      type="radio"
      value={undefined}
    />
  </div>
</div>
`;
